html album cover

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+<div class="top-left">PHARRELL WILLIAMS </div>
 
-          <!-- Level 2 'HAPPY' Header -->
+<div class="top-left"><B>HAPPY</B></div>
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
+<div class="top-left">  | FROM DESPICABLE ME 2 |                                                                                                                                                                                                                                                         </div>
+</p>
         </div>
       </div>
 
       <div id="back" class="album">
-
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
-        <!-- Level 1 'HAPPY' Header -->
-
-        <!-- Level 3 'WRITTEN BY...' Header -->
-
-        <!-- pararaph text 'PUBLISHED BY...' -->
-
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
+<p>
+<div>> '| FROM DESPICABLE ME 2 |' 
+<div>>
+<div>> 'HAPPY' 
+<div>>
+<div>> 'WRITTEN BY...' Header -->
+<div>>
+<div>> pararaph text 'PUBLISHED BY...' -->
+<div>>
+<div>> span text 'PHARRELLWILLIAMS.COM' -->
+<div>>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+</p>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
